media for main page

--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
                             <input type="text" class="main__input city-input">
                             <span class="icon-location"></span>
                         </div>
-                        <div class="main__search-arrival">
-                            <div class="search-form-info">Дата заезда</div>
-                            <input type="date" class="main__input arrival-input">
-                            <span class="icon-calendar"></span>
-                        </div>
-                        <div class="main__search-departure">
-                            <div class="search-form-info">Дата отъезда</div>
-                            <input type="date" class="main__input departure-input">
-                            <span class="icon-calendar"></span>
+                        <div class="main__search-dates">
+                            <div class="main__search-arrival">
+                                <div class="search-form-info">Дата заезда</div>
+                                <input type="date" class="main__input arrival-input">
+                                <span class="icon-calendar"></span>
+                            </div>
+                            <div class="main__search-departure">
+                                <div class="search-form-info">Дата отъезда</div>
+                                <input type="date" class="main__input departure-input">
+                                <span class="icon-calendar"></span>
+                            </div>
                         </div>
                     </div>
                     <input type="submit" value="Поиск жилья" class="main__search-btn">
