--- a/housing.html
+++ b/housing.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- для карусели -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/housing.css">
@@ -49,29 +49,36 @@
             </div>
         </header>
 
-        <main class="housing-main">
-            <aside class="options-container">
+        <div class="page-wrapper">
+            <aside class="housing-aside">
                 <form action="./reservation.html" class="reservation-form">
-                    <ul class="options-list">
-                        <li class="options-list__item">
+
+                    <input type="checkbox" id="check-options">
+                    <label for="check-options">
+                        <img  class="check-options-icon" src="img/icons/settings.png" alt="Settings">
+                    </label>
+
+                    <div class="options-container">
+                        <div class="city-option option-block">
                             <p class="option-name">Город:</p>
-                            <input type="text" name="city-input" value="Москва">
-                        </li>
-                        <li class="options-list__item">
+                            <input class="option-input" type="text" name="city-input" value="Москва">
+                        </div>
+                        <div class="arrival-option option-block">
                             <p class="option-name">Дата заезда:</p>
-                            <input type="date" name="arrival-input">
-                        </li>
-                        <li class="options-list__item">
+                            <input class="option-input" type="date" name="arrival-input">
+                        </div>
+                        <div class="departure-option option-block">
                             <p class="option-name">Дата отъезда:</p>
-                            <input type="date" name="departure-input">
-                        </li>
-                    </ul>
+                            <input class="option-input" type="date" name="departure-input">
+                        </div>
+                    </div>
                     <input type="submit" value="Забронировать" class="reservation-btn">
                 </form>
             </aside>
 
-            <section class="housing-main-section">
-                <section class="photos-wrapper">
+            <main class="housing-main">
+                <section class="carousel-section-wrapper">
+                    <h1 role="heading" class="section-name">Двухкомнатная квартира</h1>
                     <img src="" alt="">
                     <!-- подключить карусель бутстрапа -->
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -79,7 +86,7 @@
                             <div class="carousel-item active">
                                 <img class="d-block" src="img/housing_variants/var_0_1.jpg" alt="Первый слайд">
                             </div>
-                            <div class="carousel-item">
+                            <!-- <div class="carousel-item">
                                 <img class="d-block" src="img/housing_variants/var_0_2.jpg" alt="Второй слайд">
                             </div>
                             <div class="carousel-item">
@@ -87,16 +94,16 @@
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block" src="img/housing_variants/var_0_4.jpg" alt="Четвертый слайд">
-                            </div>
+                            </div> -->
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
                         <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
-                        </a>
+                        </a> -->
                     </div>
                 </section>
 
@@ -123,12 +130,12 @@
                             <img class="icon-star-black" src="img/icons/star-black.png" alt="">
                         </li>
 
-                        <span class="review-count">4</span>
+                        <span class="review-count">2</span>
                     </ul>
                 </section>
 
-                <section class="housing-description">
-                    <h2 role="heading">Описание</h2>
+                <section class="housing-section housing-description">
+                    <h2 role="heading" class="section-name">Описание</h2>
                     <ul class="descriptions-list">
                         <li class="descriptions-list__item">
                             Жилая площадь – 70м<sup>2</sup>
@@ -145,8 +152,8 @@
                     </ul>
                 </section>
 
-                <section class="housing-prices">
-                    <h2 role="heading">Цены</h2>
+                <section class="housing-section housing-prices">
+                    <h2 role="heading" class="section-name">Цены</h2>
                     <p>Стоимость указана за квартиру целиком в рублях РФ</p>
                     <div class="main-price">
                         <div class="price-value">8 000₽ за сутки</div>
@@ -154,9 +161,9 @@
                     </div>
                 </section>
 
-                <section class="housing-reviews">
-                    <h2 role="heading">Оценка и отзывы</h2>
-                    <p>На основании <span class="reviews-count">4</span> отзывов</p>
+                <section class="housing-section housing-reviews">
+                    <h2 role="heading" class="section-name">Оценка и отзывы</h2>
+                    <p>На основании <span class="reviews-count">2</span> отзывов</p>
 
                     <ul class="stars-rating">
                         <li class="stars-rating__item">
@@ -212,7 +219,7 @@
                     </div> <!--rating-->
 
                     <div class="reviews-container">
-                        <h3>Отзывы гостей</h3>
+                        <h3 class="section-name">Отзывы гостей</h3>
                         <ul class="reviews-list">
                             <li class="reviews-list__item">
                                 <img src="img/default_avatar.png" alt="" class="guest-avatar">
@@ -241,17 +248,49 @@
                                 <div class="comment-text">
                                     <p class="comment-header">Достоинства</p>
                                     <p class="comment-guest-text">Идеально расположен для любителей ходьбы и кардионагрузок. 
-                                        Кухонных принадлежностей в достатке, хороший холодильник, сантехника, планировка удобная.</p>
+                                        Кухонных принадлежностей достаточно, хороший холодильник, сантехника, планировка удобная.</p>
                                     <p class="comment-header">Недостатки</p>
                                     <p class="comment-guest-text">Отсутсвие магазинов поблизости.</p>
+                                </div>
+                                <div class="comment-imges"></div>
+                            </li>
+                            <li class="reviews-list__item">
+                                <img src="img/default_avatar.png" alt="" class="guest-avatar">
+                                <div class="comment-top">
+                                    <p class="guest-name">Олег</p>
+                                    <ul class="stars-rating">
+                                        <li class="stars-rating__item">
+                                            <img class="icon-star" src="img/icons/star.png" alt="">
+                                        </li>
+                                        <li class="stars-rating__item">
+                                            <img class="icon-star" src="img/icons/star.png" alt="">
+                                        </li>
+                                        <li class="stars-rating__item">
+                                            <img class="icon-star" src="img/icons/star.png" alt="">
+                                        </li>
+                                        <li class="stars-rating__item">
+                                            <img class="icon-star-black" src="img/icons/star-black.png" alt="">
+                                        </li>
+                                        <li class="stars-rating__item">
+                                            <img class="icon-star-black" src="img/icons/star-black.png" alt="">
+                                        </li>
+                                    </ul>
+                                    <p class="comment-date">7 сентября 2018</p>
+                                </div>
+
+                                <div class="comment-text">
+                                    <p class="comment-header">Достоинства</p>
+                                    <p class="comment-guest-text">Мягкая кровать, удобная планировка.</p>
+                                    <p class="comment-header">Недостатки</p>
+                                    <p class="comment-guest-text">Мало техники, нерабочий телевизор.</p>
                                 </div>
                                 <div class="comment-imges"></div>
                             </li>
                         </ul>
                     </div>
                 </section>
-            </section> <!--housing-main-section-->
-        </main>
+            </main> <!--housing-main-section-->
+        </div>
 
         <footer class="main-footer">
         <div class="footer-container">
