--- a/housing.html
+++ b/housing.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- для карусели -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-
+    <link rel="stylesheet" href="styles/carousel.css">
+   
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/housing.css">
     <title>DAILY rental housing</title>
@@ -80,31 +80,73 @@
                 <section class="carousel-section-wrapper">
                     <h1 role="heading" class="section-name">Двухкомнатная квартира</h1>
                     <img src="" alt="">
-                    <!-- подключить карусель бутстрапа -->
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block" src="img/housing_variants/var_0_1.jpg" alt="Первый слайд">
+                    <!-- карусель -->
+                    <div class="carousel">
+                        <ul class="slides">
+                            <input type="radio" name="radio-buttons" id="img-1" checked />
+                            <li class="slide-container">
+                                <div class="slide-image">
+                                    <img src="img/housing_variants/var_0_1.jpg">
+                                </div>
+                                <div class="carousel-controls">
+                                    <label for="img-3" class="prev-slide">
+                                        <span>&lsaquo;</span>
+                                    </label>
+                                    <label for="img-2" class="next-slide">
+                                        <span>&rsaquo;</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <input type="radio" name="radio-buttons" id="img-2" />
+                            <li class="slide-container">
+                                <div class="slide-image">
+                                    <img src="img/housing_variants/var_0_2.jpg">
+                                </div>
+                                <div class="carousel-controls">
+                                    <label for="img-1" class="prev-slide">
+                                        <span>&lsaquo;</span>
+                                    </label>
+                                    <label for="img-3" class="next-slide">
+                                        <span>&rsaquo;</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <input type="radio" name="radio-buttons" id="img-3" />
+                            <li class="slide-container">
+                                <div class="slide-image">
+                                    <img src="img/housing_variants/var_0_3.jpg">
+                                </div>
+                                <div class="carousel-controls">
+                                    <label for="img-2" class="prev-slide">
+                                        <span>&lsaquo;</span>
+                                    </label>
+                                    <label for="img-4" class="next-slide">
+                                        <span>&rsaquo;</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <input type="radio" name="radio-buttons" id="img-4" />
+                            <li class="slide-container">
+                                    <div class="slide-image">
+                                        <img src="img/housing_variants/var_0_4.jpg">
+                                    </div>
+                                    <div class="carousel-controls">
+                                        <label for="img-3" class="prev-slide">
+                                            <span>&lsaquo;</span>
+                                        </label>
+                                        <label for="img-1" class="next-slide">
+                                            <span>&rsaquo;</span>
+                                        </label>
+                                    </div>
+                                </li>
+                            <div class="carousel-dots">
+                                <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
+                                <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
+                                <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
+                                <label for="img-4" class="carousel-dot" id="img-dot-4"></label>
                             </div>
-                            <!-- <div class="carousel-item">
-                                <img class="d-block" src="img/housing_variants/var_0_2.jpg" alt="Второй слайд">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block" src="img/housing_variants/var_0_3.jpg" alt="Третий слайд">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block" src="img/housing_variants/var_0_4.jpg" alt="Четвертый слайд">
-                            </div> -->
-                        </div>
-                        <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a> -->
-                    </div>
+                        </ul>
+                    </div> <!--carousel-->
                 </section>
 
                 <section class="short-description">
@@ -342,10 +384,5 @@
         </div>
     </footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        
 </body>
 </html>
