--- a/payment.html
+++ b/payment.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/payment.css">
+    <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&display=swap" rel="stylesheet">
+
     <title>DAILY rental housing</title>
 </head>
 <body>
+    <div class="page-wrapper">
         <section class="success-payment">
             <img src="img/icons/payment/success.svg" alt="">
-            <p>Оплата успешно произведена</p>
-            <a href="./index.html">На главную</a>
+            <div class="success-text">
+                <p>Оплата прошла успешно</p>
+                <form action="./index.html">
+                    <button type="submit" class="to-main">На главную</button>
+                </form>
+            </div>
         </section>
+        <section class="info-payment">
+            <h2>Информация о заказе</h2>
+            <div class="message">
+                <img src="img/icons/message.png" alt="">
+                <span>Вам было выслано письмо с информацией об оплате на указанную почту</span>
+            </div>
+            <div class="info">
+                <div class="email">
+                    <p>Email:</p>
+                    <p>juliaaugust96@gmail.com</p>
+                </div>
+                <div class="date">
+                    <p>Дата платежа:</p>
+                    <p>26.08.2019</p>
+                </div>
+                <div class="desc">
+                    <p>Описание заказа:</p>
+                    <p><a href="./housing.html">Двухкомнатная квартира</a> сроком на <span class="num-days">2</span> суток</p>
+                </div>
+                <div class="sum">
+                    <p>Заплачено:</p>
+                    <p>16 000 ₽</p>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
