lk client & other changes

--- a/authorization.html
+++ b/authorization.html
@@ -18,7 +18,7 @@
             <form class="tab-form active">
                 <input class="input" type="email" placeholder="Введите e-mail">
                 <input class="input" type="password" placeholder="Введите пароль">
-                <a href="#" class="button">Войти</a>
+                <a href="./lk_client.html" class="button">Войти</a>
                 <ul class="socials-list">
                     <li class="socials-list__item">
                         <a href="https://vk.com" target="_blank">
