--- a/payment.html
+++ b/payment.html
@@ -40,7 +40,7 @@
                     <p><a href="./housing.html">Двухкомнатная квартира</a> сроком на <span class="num-days">2</span> суток</p>
                 </div>
                 <div class="sum">
-                    <p>Заплачено:</p>
+                    <p>Оплачено:</p>
                     <p>16 000 ₽</p>
                 </div>
             </div>
